--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
       <md-toolbar>
       <div class="md-toolbar-tools"  
         class="md-primary" ng-controller="MainCtrl">
-        <button flex="10" ng-click="toggleSidenav('left')" class="menuBtn">
+        <button flex="10" hide-gt-sm ng-click="toggleSidenav('left')" class="menuBtn">
         </button>
         <div flex="80"></div>
         <md-button flex="20" ng-click="showGridBottomSheet($event)">
