--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,9 @@
     <!-- add your site or application content here -->
     <div layout="row">
       <div class="ui-view-container">
-        <div class="well" ui-view></div>        
+        <div class="well" ui-view>
+        </div>        
+        <h1>Test</h1>
       </div>
     </div>
 
